test/resources/typer/passing/HOFIdentity.amy
object HOFIdentity
  def getId(): (Int(32)) => Int(32) :=
    (x: Int(32)) => x
  end getId

  def main(): Unit :=
    getId()(42);
    ()
  end main
end HOFIdentity