test/resources/typer/failing/FunctionCalls2.grading.amy
object FunctionCall
  def foo(i: Int(32)): Boolean = i < 0 end foo
  
  val x: Int(32) = foo(1); x
end FunctionCall
